--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -47,7 +47,7 @@ html {
   width: 100vw;
   background-color: variables.$black;
   opacity: 0;
-  z-index: 5;
+  z-index: 3;
   transition: opacity 0.2s ease;
   visibility: hidden;
 }
