--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -168,7 +168,7 @@
   .modal {
     width: 100%;
     &__container {
-      padding: 78px 10px 54px;
+      padding: 60px 10px 54px;
     }
     &__product ~ &__product {
       margin-top: 20px;
